added front end components with signin and home page

--- a/.gitignore
+++ b/.gitignore
@@ -120,43 +120,40 @@ media/
 
 
 # nextJs dependencies
-/node_modules
-frontend/node_modules/
-backend/.env
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Dependencies
+node_modules/
+.env
+.env.local
+.env.*.local
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Build output
+frontend/.next/
+frontend/out/
+frontend/build/
 
-# vercel
-.vercel
+# OS & IDE files
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Tailwind JIT cache
+frontend/.tailwindcss-cache/
+
+# Optional: ignore local Next.js cache (Speeds up git operations)
+frontend/.next/cache/
+
+# Testing
+frontend/coverage/
+frontend/.nyc_output/
+
+# Misc
+*.log
